trunk/Archive2/5f/177328ad8c52a7/output
main.cpp:6:23: error: constexpr variable 'x' must be initialized by a constant expression
        constexpr int x = std::numeric_limits<int>::max() + 1 ;
                      ^   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:6:59: note: value 2147483648 is outside the range of representable values of type 'int'
        constexpr int x = std::numeric_limits<int>::max() + 1 ;
                                                          ^
1 error generated.
